modified:   package-lock.json 	modified:   package.json 	modified:   src/App.css 	modified:   src/App.jsx 	new file:   src/Components/BackButton/BackButton.jsx 	new file:   src/Components/BackButton/BackButton.module.css 	modified:   src/Components/BottomBar/BottomBar.jsx 	modified:   src/Components/BottomBar/BottomBar.module.css     new file:   src/Components/Calendar/Calendar.jsx 	new file:   src/Components/Calendar/Calendar.module.css 	new file:   src/Components/Calendar/utilsCalendar.js 	new file:   src/Components/CreateTemplates/CreateTemplate.jsx 	new file:   src/Components/CreateTemplates/CreateTemplate.module.css 	new file:   src/Components/DaysItem/DayItem.jsx 	renamed:    src/Components/Training/Calendar/DaysItem/DayItem.module.css -> src/Components/DaysItem/DayItem.module.css 	renamed:    src/Components/Training/Calendar/DaysItem/utils.js -> src/Components/DaysItem/utils.js 	new file:   src/Components/DeleteItem/DeleteItem.jsx 	renamed:    src/Components/Training/Calendar/TrenServer/TrainingTemplates/DeleteTemplate.module.css -> src/Components/DeleteItem/DeleteItem.module.css 	modified:   src/Components/Header/Header.css	modified:   src/Components/Header/Header.jsx	new file:   src/Components/PlusButton/PlusButton.jsx	new file:   src/Components/PlusButton/PlusButton.module.css	new file:   src/Components/Templates/Templates.jsx	new file:   src/Components/Templates/Templates.module.css	deleted:    src/Components/Testing/TabSec.jsx	deleted:    src/Components/Testing/Testing.css	deleted:    src/Components/Testing/Testing.jsx	deleted:    src/Components/Training/Calendar/Calendar.jsx	deleted:    src/Components/Training/Calendar/Calendar.module.css	deleted:    src/Components/Training/Calendar/DaysItem/DayItem.jsx	deleted:    src/Components/Training/Calendar/TrenServer/TrainingTemplates/CreateTrainingTemplate.jsx	deleted:    src/Components/Training/Calendar/TrenServer/TrainingTemplates/CreateTrainingTemplate.module.css	deleted:    src/Components/Training/Calendar/

--- a/src/Components/BottomBar/BottomBar.module.css
+++ b/src/Components/BottomBar/BottomBar.module.css
@@ -27,7 +27,7 @@
     transition: color 0.2s ease-in-out;
 }
 
-.active {
+.icon.active {
     color: rgb(240, 240, 240) !important;
     font-size: 45px;
 }
