--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 html, body {
     margin: 0 !important;
     padding: 0 !important;
-    overflow-x: hidden;
+    overflow-x:hidden;
     background-color: #2d2d2d;
+    width: 100vw;
   }
 
   
