--- a/src/Components/DaysItem/DayItem.module.css
+++ b/src/Components/DaysItem/DayItem.module.css
@@ -1,5 +1,5 @@
 .day {
-    background-color: #404040;
+    background-color: var(--bg-color);
     color: #ffffff;
     text-align: center;
     padding: 0px;
