--- a/src/Components/TrainingProcess/TrainingProcess.module.css
+++ b/src/Components/TrainingProcess/TrainingProcess.module.css
@@ -1,18 +1,10 @@
-.backButton {
-    background: none;
-    border: none;
-    color: white;
-    font-size: 0.8rem;
-    cursor: pointer;
-    margin-bottom: 20px;
-}
-
-.backButton:hover {
-    transform: translateX(-3px);
-  }
 
 .container{
     width: 100%;
+    position: relative;
+    padding: 10px;
+    padding-top: 60px;
+    margin:10px;
 }
 
 .nameOfTraining{
