--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 
 :root {
     --bg-color: #404040;
+    --bg-color-sec: #2d2d2d;
     
     --text-color-ns: rgba(255, 255, 255, 0.4);
     --text-color-s: rgba(255, 255, 255, 0.8);
